--- a/complierStd/词法分析.md
+++ b/complierStd/词法分析.md
@@ -46,7 +46,7 @@
 
 * 程序示例
 
-  ![image-20190420111519907](/Users/chenyansong/Documents/note/images/compileStud/cifa-example.png)
+  ![image-20190420111519907](../images/compileStud/cifa-example.png)
 
 
 
@@ -60,7 +60,7 @@
 
   * 语法分析器在编译器中的地位
 
-    ![image-20190420112223134](/Users/chenyansong/Documents/note/images/compileStud/cifa-example2.png)
+    ![image-20190420112223134](../images/compileStud/cifa-example2.png)
 
     如果把各阶段都实现为独立的一遍的话，会导致编译程序频繁进行文件的输入输出，从文件中读入上一遍的处理结果，把当前遍的结果写入文件，这样一来，效率很低，这样可以减少多遍扫描带来的输入输出开销，提高编译程序的效率
 
@@ -68,7 +68,7 @@
 
 ## 词法分析器的结构
 
-![image-20190420113204295](/Users/chenyansong/Documents/note/images/compileStud/cifa-example3.png)
+![image-20190420113204295](..//images/compileStud/cifa-example3.png)
 
 
 
@@ -76,17 +76,17 @@
 
 存在的问题：缓冲区中只是读取到了单词的部分
 
-![image-20190420113408200](/Users/chenyansong/Documents/note/images/compileStud/cifa-example4.png)
+![image-20190420113408200](../images/compileStud/cifa-example4.png)
 
-![image-20190420113519586](/Users/chenyansong/Documents/note/images/compileStud/cifa-example5.png)
+![image-20190420113519586](../images/compileStud/cifa-example5.png)
 
  解决的方式：两个半区的互补使用
 
-![image-20190420113728554](/Users/chenyansong/Documents/note/images/compileStud/cifa-example6.png)
+![image-20190420113728554](../images/compileStud/cifa-example6.png)
 
 如果先使用的是右半区
 
-![image-20190420113825963](/Users/chenyansong/Documents/note/images/compileStud/cifa-example7.png)
+![image-20190420113825963](../images/compileStud/cifa-example7.png)
 
 
 
@@ -102,7 +102,7 @@
 
 * 一张状态转换图只包含有限个状态，其中有一个为初态，至少要有一个终态
 
-  ![image-20190420115156955](/Users/chenyansong/Documents/note/images/compileStud/cifa-example8.png)
+  ![image-20190420115156955](../images/compileStud/cifa-example8.png)
 
 * 状态转换图可用于识别(或接受)一定的字符串
 
@@ -159,9 +159,9 @@
 
   * 词法分析器的实现
 
-    ![image-20190420122609560](/Users/chenyansong/Documents/note/images/compileStud/14.png)
+    ![image-20190420122609560](../images/compileStud/14.png)
 
-     ![image-20190420122630388](/Users/chenyansong/Documents/note/images/compileStud/15.png)
+     ![image-20190420122630388](../images/compileStud/15.png)
 
     ![image-20190420122856203](/Users/chenyansong/Documents/note/images/compileStud/16.png)
 
@@ -183,4 +183,9 @@
 
   ![image-20190420124753346](/Users/chenyansong/Documents/note/images/compileStud/19.png)
 
+
+
+
+
+*部分内容整理自:中国大学MOOC-[国防科技大学《编译原理》](https://www.icourse163.org/course/NUDT-1003101005)PPT*
 
