--- a/complierStd/语法分析-自上而下分析.md
+++ b/complierStd/语法分析-自上而下分析.md
@@ -100,12 +100,12 @@
 
 ### 消除左递归的算法
 
-![image-20190503094214776](/Users/chenyansong/Documents/note/images/compileStud/65.png)
+![image-20190503094214776](../images/compileStud/65.png)
 
 
 
 习题
-![image-20190503094328327](/Users/chenyansong/Documents/note/images/compileStud/image-20190503094328327.png)
+![image-20190503094328327](../images/compileStud/image-20190503094328327.png)
 
 
 
