--- a/complierStd/上下文无关文法.md
+++ b/complierStd/上下文无关文法.md
@@ -46,7 +46,7 @@ P:产生式集合(有限)，每个产生式形式为
 
 * 文法G所产生的句子的全体是一个语言，将他记为L(G)
 
-  ![image-20190421184040705](/Users/chenyansong/Documents/note/images/compileStud/62.png)
+  ![image-20190421184040705](../images/compileStud/62.png)
 
 
 
