--- a/language/python/配置.md
+++ b/language/python/配置.md
@@ -1,3 +1,4 @@
+
 [toc]
 
 
@@ -235,6 +236,87 @@ HTTP/1.0 200 OK
 302 --- 临时重定向，如：登录
 404 --- 不存在
 500 --- server error
+
+HttpResponse(content=响应体, content_type=相应体数据类型, status=状态码)
+#作用:向客户端浏览器返回响应，同时携带响应体的内容
+
+#常用的content_type:
+-'text/html' (default， HTML文件)
+-'text/plain' (纯文本)
+-'text/css' (css文件)
+-’text/javascript‘ (js file)
+-’mulipart/form-data' (文件提交)
+-‘application/json' (json传输)
+-‘Application/xml' (xml文件)
+
+
+
+```
+
+
+
+其他的Response子类
+
+```python
+HttpResponseRedirect #重定向 --- 302
+HttpResponseBadRequest #错误请求 --- 400
+HttpResponseNotFound	#404
+HttpResponseForbidden 	#请求被禁止 403
+HttpResponseServerError		#服务器错误 500
+
+
+def page_view(request):
+    return HttpResponseRedirect('/page/1')
+```
+
+
+
+无论是get或者post请求，统一都是由视图请求函数接受处理，需要在视图函数中通过request.method区分具体的请求动作
+
+```python
+if request.method == 'GET':
+    #处理get请求的业务逻辑
+elif request.method == 'POST':
+    #处理post请求的业务逻辑
+else:
+    #其他请求逻辑
+```
+
+
+
+get请求
+
+使用场景：
+
+1. 浏览器回车
+2. a标签 
+
+
+
+```python
+#http://localhost:8000/test_request?param1=value1&param2=value2
+
+#获取参数
+def page_view(request):
+    request.GET['参数名']  # QueryDict({'a':['100'], 'b':['100', '200']})， 如果没有会报错，推荐第二种
+    request.GET.get('参数名', '默认值')
+    
+    #http://localhost:8000/page_view?a=100&a=200
+    request.GET.getlist('参数名')	#---->['100','200'] 适合复选框
+    
+```
+
+
+
+post请求
+
+```python
+def page_view(request):
+    request.POST['参数名'] # request.POST 绑定的是DueryDict
+    request.POST.get('参数名', '')
+    request.POST.getlist('参数名')
+    
+    #取消csrf验证，否则Django讲会拒绝客户端发过来的POST请求，报403
 ```
 
 
