--- a/language/python/django/序列化.md
+++ b/language/python/django/序列化.md
@@ -125,3 +125,15 @@ TODO list
 
 python的环境venv
 
+
+
+
+
+jwt遇到的问题：
+
+# Token cannot be created ('str' has no attribute 'decode') #241
+
+
+
+https://github.com/flavors/django-graphql-jwt/issues/241
+
