--- a/language/python/django/序列化.md
+++ b/language/python/django/序列化.md
@@ -137,3 +137,46 @@ jwt遇到的问题：
 
 https://github.com/flavors/django-graphql-jwt/issues/241
 
+
+
+
+
+# Django APP 导入的问题
+
+模块要处于Python搜索路径中的目录里才能被导入，但我们不喜欢维护一个永久性的大目录，因为其他所有的Python脚本和应用程序导入模块的时候性能都会被拖累。本节代码动态地在该路径中添加了一个"目录"，当然前提是此目录存在而且此前不在sys.path中。
+
+可以选择用sys.path.insert(0,…，这样新添加的目录会优先于其他目录被import检查。
+
+
+
+# 重写自定义验证
+
+
+
+​                AUTHENTICATION_BACKENDS               这个是Django自带的auth， 可以如下的重写
+
+```python
+AUTHENTICATION_BACKENDS = (
+    # 'users.views.CustomBackend',
+    'apps.loginauth.views.CustomBackend',
+)
+
+#自定义实现类
+
+class CustomBackend(ModelBackend):
+    def authenticate(self, request, username=None, password=None, **kwargs):
+        try:
+            user = User.objects.get(Q(username=username))
+            # user = UserModel.objects.get(Q(phone_num=phone_num)|Q(email=phone_num))
+            # 验证 验证码
+            if user.check_password(password):
+                return user
+        except Exception as e:
+            return None
+
+```
+
+带验证码的验证：
+
+https://www.cnblogs.com/lyq-biu/p/10077820.html
+
