--- a/language/python/django/序列化.md
+++ b/language/python/django/序列化.md
@@ -180,3 +180,40 @@ class CustomBackend(ModelBackend):
 
 https://www.cnblogs.com/lyq-biu/p/10077820.html
 
+
+
+
+
+## 反向查询
+
+原来是外键关联的时候要设置related_name=  如果不设置，那么在使用的时候，serializers的时候，应该使用表名_set  字段，所以想到得到目标结果，应该这么写
+
+```python
+class Album(models.Model): # 专辑
+    album_name = models.CharField(max_length=100)
+    artist = models.CharField(max_length=100)
+
+class Track(models.Model): #乐曲
+    album = models.ForeignKey(Album, related_name='tracks', on_delete=models.CASCADE)
+    order = models.IntegerField()
+    title = models.CharField(max_length=100)
+    duration = models.IntegerField()
+
+    class Meta:
+        unique_together = ['album', 'order']
+        ordering = ['order']
+
+    def __str__(self):
+        return '%d: %s' % (self.order, self.title)
+    
+  
+
+# 反向查询需要用到 related_name
+class AlbumSerializer(serializers.ModelSerializer):
+    tracks = serializers.PrimaryKeyRelatedField(many=True, read_only=True) #其实可以试着换成对应的Track类
+
+    class Meta:
+        model = Album
+        fields = ['album_name', 'artist', 'tracks']
+```
+
