--- a/language/python/django/序列化.md
+++ b/language/python/django/序列化.md
@@ -217,3 +217,38 @@ class AlbumSerializer(serializers.ModelSerializer):
         fields = ['album_name', 'artist', 'tracks']
 ```
 
+
+
+
+
+# 使用SerializerMethodField自定义方法
+
+```python
+
+class ArticleSerializer(serializers.ModelSerializer):
+    author = serializers.ReadOnlyField(source="author.username")
+    status = serializers.ReadOnlyField(source="get_status_display")
+    cn_status = serializers.SerializerMethodField()            #自定义方法
+ 
+    class Meta:
+        model = Article
+        fields = '__all__'
+        read_only_fields = ('id', 'author', 'create_date')
+ 
+ 
+    def get_cn_status(self, obj):
+        if obj.status == 'p':
+            return "已发表"
+        elif obj.status == 'd':
+            return "草稿"
+        else:
+            return ''
+        
+```
+
+
+
+
+
+
+
