--- a/oldnote/bigdata/clickhouse/安装及配置.md
+++ b/oldnote/bigdata/clickhouse/安装及配置.md
@@ -10,28 +10,17 @@ https://www.dazhuanlan.com/2020/03/26/5e7bb2bf85c0d/
 
 
 
-```shell
-#添加字段
-ALTER TABLE visits ADD COLUMN browser String AFTER user_id
+## 系统要求[ ](https://clickhouse.com/docs/zh/getting-started/install/#xi-tong-yao-qiu)
 
-#建表
-CREATE TABLE tutorial.threat_iocs
-(
-    `threat_id` UInt32,
-    `category` String,
-    `category_name` String,
-    `created_time` DateTime,
-    `item` String,
-    `geo` String,
-    `score` String
-)
-ENGINE = MergeTree()
-ORDER BY (threat_id)
+ClickHouse可以在任何具有x86_64，AArch64或PowerPC64LE CPU架构的Linux，FreeBSD或Mac OS X上运行。
 
+官方预构建的二进制文件通常针对x86_64进行编译，并利用`SSE 4.2`指令集，因此，除非另有说明，支持它的CPU使用将成为额外的系统需求。下面是检查当前CPU是否支持SSE 4.2的命令:
 
 ```
+$ grep -q sse4_2 /proc/cpuinfo && echo "SSE 4.2 supported" || echo "SSE 4.2 not supported"
+```
 
-
+要在不支持`SSE 4.2`或`AArch64`，`PowerPC64LE`架构的处理器上运行ClickHouse，您应该通过适当的配置调整从[源代码构建ClickHouse](https://clickhouse.com/docs/zh/getting-started/install/#from-sources)。
 
 
 
@@ -47,6 +36,9 @@ curl -O https://repo.clickhouse.tech/tgz/clickhouse-common-static-dbg-$LATEST_VE
 curl -O https://repo.clickhouse.tech/tgz/clickhouse-server-$LATEST_VERSION.tgz
 curl -O https://repo.clickhouse.tech/tgz/clickhouse-client-$LATEST_VERSION.tgz
 
+# 需要切换到clickhouse用户
+su - clickhouse
+
 tar -xzvf clickhouse-common-static-$LATEST_VERSION.tgz
 sudo clickhouse-common-static-$LATEST_VERSION/install/doinst.sh
 
@@ -61,9 +53,36 @@ tar -xzvf clickhouse-client-$LATEST_VERSION.tgz
 sudo clickhouse-client-$LATEST_VERSION/install/doinst.sh
 
 
+```
+
+# 修改配置
+
+参见：https://cloud.tencent.com/developer/article/1761750
+
+```shell
+# vim /etc/clickhouse-server/config.xml
+
+#参见同级目录下的config.xml
+```
+
+# 创建data目录
+
+```shell
+mkdir -p /data2/clickhouse
+
+chown -R clickhouse:clickhouse /data2/clickhouse
+```
+
+
+
+# 启动
+
+```shell
+
 #启动
 sudo /etc/init.d/clickhouse-server start
-
+#or
+sudo systemctl start clickhouse-server
 ```
 
 
@@ -135,6 +154,34 @@ drwxr-xr-x 4 root root 4096 12月  5 22:38 usr
 [root@bdsoc clickhouse-server-20.10.6.27]# 
 
 ```
+
+
+
+
+
+# 创建表
+
+```shell
+#添加字段
+ALTER TABLE visits ADD COLUMN browser String AFTER user_id
+
+#建表
+CREATE TABLE tutorial.threat_iocs
+(
+    `threat_id` UInt32,
+    `category` String,
+    `category_name` String,
+    `created_time` DateTime,
+    `item` String,
+    `geo` String,
+    `score` String
+)
+ENGINE = MergeTree()
+ORDER BY (threat_id)
+
+```
+
+
 
 
 
