--- a/language/python/问题记录.md
+++ b/language/python/问题记录.md
@@ -124,5 +124,11 @@ if __name__ == "__main__":
 
 
 
+# process 的问题
 
+https://www.php.cn/python-tutorials-414052.html
+
+https://www.jianshu.com/p/e0e77ef6354f
+
+https://www.cnblogs.com/lovellll/p/10229957.html
 
