--- a/language/python/django/序列化.md
+++ b/language/python/django/序列化.md
@@ -248,6 +248,21 @@ class ArticleSerializer(serializers.ModelSerializer):
 
 
 
+# extra_kwargs 修改原有的model的字段限制
+
+```python
+#使用extra_kwargs参数为ModelSerializer添加或修改原有的选项参数---字典格式
+
+class CreateUserSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = User
+        fields = ['email', 'username', 'password']
+        extra_kwargs = {'password': {'write_only': True}}
+
+```
+
+
+
 
 
 
