--- a/language/python/django/配置.md
+++ b/language/python/django/配置.md
@@ -21,7 +21,7 @@ django-admin startproject mysite1
 #curl http://127.0.0.1:8000 #default port 8000
 
 
-python3 manage.py starapp #创建应用
+python3 manage.py startapp app-name#创建应用
 python3 manage.py migrate #数据库迁移
 
 #python3 manage.py  #回车，查看所以的命令
